After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764018 - glcontext: try wglCreateContextAttribsARB first even not using GL3 core profile
glcontext: try wglCreateContextAttribsARB first even not using GL3 core profile
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.7.91
Other Linux
: Normal normal
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-22 08:58 UTC by comicfans44
Modified: 2016-06-21 13:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
misc patch to address this (2.25 KB, patch)
2016-03-22 08:58 UTC, comicfans44
committed Details | Review

Description comicfans44 2016-03-22 08:58:18 UTC
Created attachment 324524 [details] [review]
misc patch to address this

I've found commit 	1a6fe3db40ec3a0946f2870ebb25a9ebed55245f
glcontext/wgl: implement gl3 core profile context selection

changed none GL3 core profile context create to wglCreateContext,
we can still try wglCreateContextAttribs first.
Comment 1 Sebastian Dröge (slomo) 2016-03-22 09:07:13 UTC
What exactly is the problem this is fixing?
Comment 2 comicfans44 2016-03-23 00:48:36 UTC
(In reply to Sebastian Dröge (slomo) from comment #1)
> What exactly is the problem this is fixing?

seems when using context sharing ,wglCreateContextAttribsARB is better supported than wglCreateContext+wglShareLists,  

I've created similar bug before https://bugzilla.gnome.org/show_bug.cgi?id=726494
since I didn't find a REOPEN option so recreate a new one
Comment 3 Matthew Waters (ystreet00) 2016-06-21 13:08:10 UTC
commit 6ed2ca373a9af0c09347bd2b179f8f571c1e7d6d
Author: Wang Xin-yu (王昕宇) <comicfans44@gmail.com>
Date:   Tue Mar 22 16:51:53 2016 +0800

    glcontext/wgl: try wglCreateContextAttribsARB even not gl3 core profile
    
    https://bugzilla.gnome.org/show_bug.cgi?id=764018