glcontext/wgl: try wglCreateContextAttribsARB even not gl3 core profile

https://bugzilla.gnome.org/show_bug.cgi?id=764018